compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__unqualified_using_private_constructo.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one.{Two}\n\npub fn main() {\n  Two\n}"
---
----- SOURCE CODE
-- one.rakun
record Two { Two }

-- main.rakun
import one.{Two}

pub fn main() {
  Two
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.rakun:1:13
  │
1 │ import one.{Two}
  │             ^^^

The module `one` does not have a `Two` value.

error: Unknown variable
  ┌─ /src/one/two.rakun:4:3
  │
4 │   Two
  │   ^^^

The name `Two` is not in scope here.
